--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,25 @@
+:root {
+    --Scania-White: #FFFFFF;
+    --Scania-Blue: #041E42;
+    --Scania-Black: #000000;
+
+    --Scania-Grey-50: #F9FAFB;
+    --Scania-Grey-100: #EDEFF3;
+    --Scania-Grey-200: #E7E9EE;
+    --Scania-Grey-300: #DBDFE6;
+    --Scania-Grey-400: #CDD1DB;
+    --Scania-Grey-500: #B0B7C4;
+    --Scania-Grey-600: #868FA2;
+    --Scania-Grey-700: #56657A;
+    --Scania-Grey-800: #37414F;
+    --Scania-Grey-846: #2B323D;
+    --Scania-Grey-868: #242A33;
+    --Scania-Grey-900: #1D2229;
+    --Scania-Grey-958: #0D0F13;
+
+    /* These colors have been taken from https://digitaldesign.scania.com/foundations/foundation-colours/specification */
+}
+
 html,
 body {
   padding: 0;
@@ -15,4 +37,100 @@ a {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY Headline';
+    src: url('ScaniaSansCYHeadline-Bold.eot');
+    src: local('Scania Sans CY Headline Bold'), local('ScaniaSansCYHeadline-Bold'),
+        url('ScaniaSansCYHeadline-Bold.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCYHeadline-Bold.woff2') format('woff2'),
+        url('ScaniaSansCYHeadline-Bold.woff') format('woff'),
+        url('ScaniaSansCYHeadline-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY';
+    src: url('ScaniaSansCY-Bold.eot');
+    src: local('Scania Sans CY Bold'), local('ScaniaSansCY-Bold'),
+        url('ScaniaSansCY-Bold.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCY-Bold.woff2') format('woff2'),
+        url('ScaniaSansCY-Bold.woff') format('woff'),
+        url('ScaniaSansCY-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY Condensed';
+    src: url('ScaniaSansCYCondensed-Regular.eot');
+    src: local('Scania Sans CY Condensed Regular'), local('ScaniaSansCYCondensed-Regular'),
+        url('ScaniaSansCYCondensed-Regular.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCYCondensed-Regular.woff2') format('woff2'),
+        url('ScaniaSansCYCondensed-Regular.woff') format('woff'),
+        url('ScaniaSansCYCondensed-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY Condensed';
+    src: url('ScaniaSansCYCondensed-Italic.eot');
+    src: local('Scania Sans CY Condensed Italic'), local('ScaniaSansCYCondensed-Italic'),
+        url('ScaniaSansCYCondensed-Italic.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCYCondensed-Italic.woff2') format('woff2'),
+        url('ScaniaSansCYCondensed-Italic.woff') format('woff'),
+        url('ScaniaSansCYCondensed-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY Headline';
+    src: url('ScaniaSansCYHeadline-Regular.eot');
+    src: local('Scania Sans CY Headline Regular'), local('ScaniaSansCYHeadline-Regular'),
+        url('ScaniaSansCYHeadline-Regular.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCYHeadline-Regular.woff2') format('woff2'),
+        url('ScaniaSansCYHeadline-Regular.woff') format('woff'),
+        url('ScaniaSansCYHeadline-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY';
+    src: url('ScaniaSansCY-Italic.eot');
+    src: local('Scania Sans CY Italic'), local('ScaniaSansCY-Italic'),
+        url('ScaniaSansCY-Italic.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCY-Italic.woff2') format('woff2'),
+        url('ScaniaSansCY-Italic.woff') format('woff'),
+        url('ScaniaSansCY-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY';
+    src: url('ScaniaSansCY-Regular.eot');
+    src: local('Scania Sans CY Regular'), local('ScaniaSansCY-Regular'),
+        url('ScaniaSansCY-Regular.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCY-Regular.woff2') format('woff2'),
+        url('ScaniaSansCY-Regular.woff') format('woff'),
+        url('ScaniaSansCY-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Scania Sans CY Condensed';
+    src: url('ScaniaSansCYCondensed-Bold.eot');
+    src: local('Scania Sans CY Condensed Bold'), local('ScaniaSansCYCondensed-Bold'),
+        url('ScaniaSansCYCondensed-Bold.eot?#iefix') format('embedded-opentype'),
+        url('ScaniaSansCYCondensed-Bold.woff2') format('woff2'),
+        url('ScaniaSansCYCondensed-Bold.woff') format('woff'),
+        url('ScaniaSansCYCondensed-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
