Made animation for the cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,8 @@
     --Scania-Grey-900: #1D2229;
     --Scania-Grey-900-transparent: rgb(29, 34, 41, .5);
     --Scania-Grey-958: #0D0F13;
-
+    --Scania-Font: Scania Sans CY Headline;
+    --Scania-Font-2: Scania Sans CY;
     /* These colors have been taken from https://digitaldesign.scania.com/foundations/foundation-colours/specification */
 }
 
